Trying to get unit testing to work with NF